# metabase-mcp

./: .gitignore  README.md  RELEASING.md  app.py  client.py  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_cards.py  test_client.py  test_collections.py  test_dashboards.py  test_databases.py  test_queries.py  test_search.py
tools/: __init__.py  cards.py  collections.py  dashboards.py  databases.py  queries.py  search.py
